# regintel

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  regulation_sections.csv  streamlit_app.py
alembic/: env.py
alembic/versions/: 3618b1d7fdbc_add_context_documents_and_chunks.py  4211eb437cf0_add_impact_analyses_table.py  4ee563ba8b97_add_section_embeddings.py  5fa916ef0201_add_uniqueness_constraints.py  6aebfb9948b5_add_corpus_to_context_documents.py  81951231fba7_add_hnsw_index_on_section_embeddings.py  8228100901ac_add_impact_analyses_table.py  b84db1b1e05d_add_changes_table.py  (+3 more)
data/: part_211_pretty.xml  part_211_raw.xml
eval/: RESULTS.md  RESULTS2.md  impact_prompt_iteration_notes.md  impact_review.md  qa_iteration_notes.md  run_classification_eval.py  run_qa_eval.py
scripts/: analyze_impacts.py  ask.py  ask_eu.py  classify_changes.py  detect_changes.py  embed_context_chunks.py  embed_fda_guidance_chunks.py  embed_sections.py  fetch_and_parse.py  ingest_eu_gmp_annex1.py  ingest_eu_gmp_annex11.py  ingest_eu_gmp_chapter4.py  ingest_fda_aseptic_processing_guidance.py  ingest_fda_data_integrity_guidance.py  ingest_fda_process_validation_guidance.py  ingest_fda_quality_systems_guidance.py  ingest_fr_820_preamble.py  ingest_ich_q10.py  ingest_ich_q9r1.py  inspect_ecfr_xml.py  load_ecfr_part.py  load_part_211.py  search_sections.py  test_context_search.py  test_fda_guidance_search.py  test_llm.py  test_new_sources_search.py
src/: llm.py  schemas.py
src/db/: models.py  (+1 more)
tests/: test_ecfr_parser.py  test_load_ecfr_part_integration.py
(+15 files in other folders)
