[project]
name = "regintel"
version = "0.1.0"
description = "Regulatory intelligence pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.0",
  "httpx>=0.28.1",
  "lxml>=6.0.2",
  "openai>=2.30.0",
  "pandas>=3.0.2",
  "pdfplumber>=0.11.9",
  "pgvector>=0.4.1",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.0.0",
  "pypdf>=6.9.2",
  "python-dotenv>=1.0.0",
  "sqlalchemy>=2.0.0",
  "streamlit>=1.56.0",
  "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
